# engine

./: .gitignore  CMakeLists.txt  README.md
src/: engine.h
src/core/: game.cpp  game.h  renderer.cpp  renderer.h
src/helpers/: vkDevice.cpp  vkDevice.h  vkIndices.cpp  vkIndices.h  vkSwapchain.cpp  vkSwapchain.h  vkVLayers.cpp  vkVLayers.h
src/loaders/: loaders.cpp  loaders.h  shader.cpp
src/test/: renderer.cpp
src/test/shaders/: triangle.vert
